# Voxel-Engine

./: .gitignore  CMakeLists.txt
assets/shaders/: basic.frag  basic.vert
src/: main.cpp
src/core/: CLI.cpp  CLI.h  ChunkManager.cpp  ChunkManager.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Log.cpp  Log.h  Profile.h  Time.cpp  Time.h
src/ecs/: Components.h  Entity.h  Hierarchy.h  Registry.h  Systems.h
src/game/: Game.cpp  Game.h
src/platform/: Window.cpp  Window.h
src/render/: BufferLayout.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Ray.h  Raycast.h  Render.cpp  Render.h  RenderObject.h  Shader.cpp  Shader.h  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/scene/: Scene.h
src/util/: Noise.h
src/voxel/: Chunk.cpp  Chunk.h  ChunkMesher.cpp  ChunkMesher.h  TerrainGenerator.cpp  TerrainGenerator.h  Voxel.h
